fix: fix select visibility for screenreader

--- a/museum-adaptive/src/scss/sections/_popup.scss
+++ b/museum-adaptive/src/scss/sections/_popup.scss
@@ -308,7 +308,9 @@
   }
 
   select {
-    display: none;
+    position: absolute;
+    left: -999px;
+    z-index: -999;
   }
 
   .select-selected {
